website/oss-score-site/src/components/Homepage.css
header {

    font-size: 30px;
    text-align: center;
    padding: 6px;
    color: white;
}

/*** form css ***/

label {
    color: white;
    text-align: left;
}

#search1,
#search2 {
    background-color: #e6e6e6;

    border-style: solid;
    border-width: 1.5px;
    border-color: #000000
}

::placeholder {
    color: #666666;
}

.searchbar {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.searchbar>div {
    margin-top: 10px;
    padding: 30px;
}

.compare {
    text-align: center;
    font-size: 20px;
}

.compare-button {
    font-size: 18px;
    background-color: #d0cbe7;

    padding-top: 4px;
    padding-bottom: 4px;
    padding-left: 10px;
    padding-right: 10px;

}

.error-message {
    display: block;
    visibility: hidden;
    color: #cc0000;
    text-align: left;
    font-size: 10px;
}

/*** loading ***/

.loading {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin-left: 15%;
    margin-right: 15%;
    margin-bottom: 20px;
    margin-top: 20px;
}

.loading>div {
    padding: 10px;
}

/* Tooltip container */
.tool-tip {
    position: absolute;
    /* position: relative; */
    top: 0px;
    right: 0px;
    display: inline-block;
  }
  
/* Tooltip text */
.tool-tip .tooltiptext {
    visibility: hidden;
    width: 160px;
    background-color: #555;
    color: #fff;
    text-align: center;
    padding: 5px 5px;
    border-radius: 6px;
  
    /* Position the tooltip text */
    position: absolute;
    bottom: 125%;
    left: 50%;
    margin-left: -80px;
  
    /* Fade in tooltip */
    opacity: 0;
    transition: opacity 0.3s;
  }
  
/* Tooltip arrow */
.tool-tip .tooltiptext::after {
    content: "";
    position: absolute;
    top: 100%;
    left: 50%;
    margin-left: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: #555 transparent transparent transparent;
  }
  
/* Show the tooltip text when you mouse over the tooltip container */
.tool-tip:hover .tooltiptext {
    visibility: visible;
    opacity: 1;
  }

.tool-tip {
    width: 25px;
}


/* Tooltip container */
.tool-tip-repo {
    position: relative;
    float: right;
    display: inline-block;
    width: 25px;
  }
  
/* Tooltip text */
.tool-tip-repo .tooltiptext-repo {
    visibility: hidden;
    width: 120px;
    background-color: #555;
    color: #fff;
    text-align: center;
    padding: 5px 5px;
    border-radius: 6px;
  
    /* Position the tooltip text */
    position: absolute;
    bottom: 125%;
    left: 50%;
    margin-left: -60px;
  
    /* Fade in tooltip */
    opacity: 0;
    transition: opacity 0.3s;
  }
  
/* Tooltip arrow */
.tool-tip-repo .tooltiptext-repo::after {
    content: "";
    position: absolute;
    top: 100%;
    left: 50%;
    margin-left: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: #555 transparent transparent transparent;
  }
  
/* Show the tooltip text when you mouse over the tooltip container */
.tool-tip-repo:hover .tooltiptext-repo {
    visibility: visible;
    opacity: 1;
  }

/*** head2head ***/

.head2head {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin-left: 15%;
    margin-right: 15%;
    margin-bottom: 20px;
    margin-top: 20px;
}

.head2head > div {
    padding: 10px;
}

.repo-stats {
    background-color: #5b4693;

    text-align: center;
    flex: 1;
    
    margin-top: 10px;
    margin-bottom: 10px;
    margin-left: 20px;
    margin-right: 20px;
    border-radius: 7px;
}

.basic-info-display .metrics-display {
    margin-top: 10px;
    margin-bottom: 10px;
}

.basic-info {
    font-size: 24px;
}

.info-flexbox {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    row-gap: 10px;
    column-gap: 10px;
}

#repoOwnerName {
    text-decoration: underline;
    padding-bottom: 5px;
}

#repoOwnerName, .metric-category {
    color: #e6e6e6;
}

.metric-category {
    font-weight: bold;
    font-size: 22px;
    padding-top:3px;
}

.metric-container {
    /* border-style: solid; */
    border-radius: 10px;
    margin-top: 5px;
    margin-bottom: 5px;
    position: relative;
}

.metric-container-title {
    font-size: 20px;
    /* text-decoration: underline; */
}

.submetric-container {
}

.submetric-container-title {
    font-size: 18px;
    color: white;
}

.metric {
    /* color: green; */
    font-size: 18px;
}

.confidence {
    font-size: 15px;
}

#loading {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    padding: 10px;

}


  /* CSS FOR LOADING SVG */
  .loading-extension {
    height: 30%;
    width: 30%;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
        -ms-flex-pack: center;
            justify-content: center;
    -webkit-box-align: center;
    -webkit-align-items: center;
        -ms-flex-align: center;
            align-items: center; }
  
  .machine-extension {
    width: 60vmin;
    fill: black; }
  
  .small-shadow-extension, .medium-shadow-extension, .large-shadow-extension {
    fill: rgba(0, 0, 0, 0.05); }
  
  .small-extension {
    -webkit-animation: counter-rotation 2.5s infinite linear;
       -moz-animation: counter-rotation 2.5s infinite linear;
         -o-animation: counter-rotation 2.5s infinite linear;
            animation: counter-rotation 2.5s infinite linear;
    -webkit-transform-origin: 100.136px 225.345px;
        -ms-transform-origin: 100.136px 225.345px;
            transform-origin: 100.136px 225.345px; }
  
  .small-shadow-extension {
    -webkit-animation: counter-rotation 2.5s infinite linear;
       -moz-animation: counter-rotation 2.5s infinite linear;
         -o-animation: counter-rotation 2.5s infinite linear;
            animation: counter-rotation 2.5s infinite linear;
    -webkit-transform-origin: 110.136px 235.345px;
        -ms-transform-origin: 110.136px 235.345px;
            transform-origin: 110.136px 235.345px; }
  
  .medium-extension {
    -webkit-animation: rotation 3.75s infinite linear;
       -moz-animation: rotation 3.75s infinite linear;
         -o-animation: rotation 3.75s infinite linear;
            animation: rotation 3.75s infinite linear;
    -webkit-transform-origin: 254.675px 379.447px;
        -ms-transform-origin: 254.675px 379.447px;
            transform-origin: 254.675px 379.447px; }
  
  .medium-shadow-extension {
    -webkit-animation: rotation 3.75s infinite linear;
       -moz-animation: rotation 3.75s infinite linear;
         -o-animation: rotation 3.75s infinite linear;
            animation: rotation 3.75s infinite linear;
    -webkit-transform-origin: 264.675px 389.447px;
        -ms-transform-origin: 264.675px 389.447px;
            transform-origin: 264.675px 389.447px; }
  
  .large-extension {
    -webkit-animation: counter-rotation 5s infinite linear;
       -moz-animation: counter-rotation 5s infinite linear;
         -o-animation: counter-rotation 5s infinite linear;
            animation: counter-rotation 5s infinite linear;
    -webkit-transform-origin: 461.37px 173.694px;
        -ms-transform-origin: 461.37px 173.694px;
            transform-origin: 461.37px 173.694px; }
  
  .large-shadow-extension {  
    -webkit-animation: counter-rotation 5s infinite linear;
       -moz-animation: counter-rotation 5s infinite linear;
         -o-animation: counter-rotation 5s infinite linear;
            animation: counter-rotation 5s infinite linear;
    -webkit-transform-origin: 471.37px 183.694px;
        -ms-transform-origin: 471.37px 183.694px;
            transform-origin: 471.37px 183.694px; }
  
  @-webkit-keyframes rotation {
      from {-webkit-transform: rotate(0deg);}
      to   {-webkit-transform: rotate(359deg);}
  }
  @-moz-keyframes rotation {
      from {-moz-transform: rotate(0deg);}
      to   {-moz-transform: rotate(359deg);}
  }
  @-o-keyframes rotation {
      from {-o-transform: rotate(0deg);}
      to   {-o-transform: rotate(359deg);}
  }
  @keyframes rotation {
      from {transform: rotate(0deg);}
      to   {transform: rotate(359deg);}
  }
  
  @-webkit-keyframes counter-rotation {
      from {-webkit-transform: rotate(359deg);}
      to   {-webkit-transform: rotate(0deg);}
  }
  @-moz-keyframes counter-rotation {
      from {-moz-transform: rotate(359deg);}
      to   {-moz-transform: rotate(0deg);}
  }
  @-o-keyframes counter-rotation {
      from {-o-transform: rotate(359deg);}
      to   {-o-transform: rotate(0deg);}
  }
  @keyframes counter-rotation {
      from {transform: rotate(359deg);}
      to   {transform: rotate(0deg);}
  }


/* Metric Containers */

.lg-container {
    width: 175px;
    align-content: center;
}

.lg-container .metric-container-title {
    font-size: 20px;

}

.lg-container .metric-confidence {
    font-size: 15px;
}

.lg-container .metric-num {
    font-size: 25px;
}


/* Bar display */

.bar-container {
    padding-top: 10px;
    padding-bottom: 15px;
    padding-left: 10px;
    padding-right: 10px;
}

.bar-container .metric-container-title {
    font-size: 22px;
}

.bar-container .metric-num {
    font-size: 18px;
}

.bar-container .metric {
    margin-top: 10px;
    /* padding-right: 100px; */
    margin-right: 10px;

}

.bar-and-conf .metric-confidence {
    font-size: 15px;
}

.bar-container .bar-title-metric {
    position: relative;
    float: left;
}



.bar-display {
    display: grid;
    grid-template-columns: 1fr;
    padding-top: 5px;
    align-items: center;
    width: 100%;
}

.bar-display div {
    grid-row-start: 1;
    grid-column-start: 1;
}



.bar {
    justify-content: center;
    grid-row: 1/3;
    margin-top: auto;
    margin-bottom: auto;
    height: 20px;
    border-radius: 5px;
    width: 105%;
    background-image:
        linear-gradient(
        to right, 
        red, 
        rgb(255, 255, 0), 
        green
        );
}

.pointer {
    margin-top: auto;
    margin-bottom: auto;
    grid-row: 2/3;
    height: 120%;
    width: 5px;
    background-color: darkslategrey;
    position: relative;
    top: -10%;
    border-radius: 5px;
}

.low {
    position: relative;
    float:left;
    padding-left: 5%;
    top: -20%;
}

.high {
    position: relative;
    float:right;
    padding-right: 5%;
    top: -20%;
}

.bar-and-conf {
    display: inline-grid;
    grid-template-columns: auto;
    grid-auto-columns: fit-content;
    width: 50%; 
}

